[tool.poetry]
name = "abc238"
version = "0.1.0"
description = ""
authors = ["dff9th <dff9th@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyright = "^0.0.13"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
